--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+*.js
+!js/libs/*.js
+
 # Numerous always-ignore extensions
 *.diff
 *.err
@@ -34,7 +37,3 @@ dwsync.xml
 intermediate
 publish
 .idea
-
-# build script local files
-build/buildinfo.properties
-build/config/buildinfo.properties
