--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,9 @@
 server {
-  listen 50.116.11.184:80;
+  listen 50.116.11.184:443 http2 ssl;
   server_name ytinstant.com;
+
+  ssl_certificate /etc/letsencrypt/live/ytinstant.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/ytinstant.com/privkey.pem;
 
   root /home/feross/www/ytinstant.com/static;
 
@@ -8,7 +11,17 @@ server {
 }
 
 server {
+  listen 50.116.11.184:443 http2 ssl;
+  server_name www.ytinstant.com;
+
+  ssl_certificate /etc/letsencrypt/live/ytinstant.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/ytinstant.com/privkey.pem;
+
+  rewrite ^ https://ytinstant.com$request_uri permanent;
+}
+
+server {
   listen 50.116.11.184:80;
-  server_name www.ytinstant.com youtubeinstant.com www.youtubeinstant.com;
-  rewrite ^ http://ytinstant.com$request_uri permanent;
+  server_name ytinstant.com www.ytinstant.com youtubeinstant.com www.youtubeinstant.com;
+  rewrite ^ https://ytinstant.com$request_uri permanent;
 }
