--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,9 @@ server {
 
   ssl_certificate /etc/letsencrypt/live/ytinstant.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/ytinstant.com/privkey.pem;
+  ssl_stapling on;
+  ssl_stapling_verify on;
+  ssl_trusted_certificate /etc/letsencrypt/live/ytinstant.com/chain.pem;
 
   root /home/feross/www/ytinstant.com/static;
 
@@ -16,6 +19,9 @@ server {
 
   ssl_certificate /etc/letsencrypt/live/ytinstant.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/ytinstant.com/privkey.pem;
+  ssl_stapling on;
+  ssl_stapling_verify on;
+  ssl_trusted_certificate /etc/letsencrypt/live/ytinstant.com/chain.pem;
 
   rewrite ^ https://ytinstant.com$request_uri permanent;
 }
